package ar.edu.utn.frba.dds.contenido;

public enum Origen {
    ARCHIVO,
    CONTRIBUYENTE
}
