package ar.edu.utn.frba.dds.criterio;

import ar.edu.utn.frba.dds.contenido.Ubicacion;

public class CriterioPorUbicacion {
    private Ubicacion ubicacionFiltrada;
}
