package ar.edu.utn.frba.dds.solicitud;

public enum EstadoDeSolicitud {
    PENDIENTE,
    ACEPTADA,
    RECHAZADA
}
